changements de noms

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="language" content="fr">
         <link rel="stylesheet" type="text/css" href="code/css/nuage.css">
-        <link rel="stylesheet" type="text/css" href="code/css/recipient.css">
+        <link rel="stylesheet" type="text/css" href="code/css/reservoir.css">
         <link rel="stylesheet" type="text/css" href="code/css/ameliorations.css">
-        <link rel="stylesheet" type="text/css" href="code/css/rain.css">
+        <link rel="stylesheet" type="text/css" href="code/css/population.css">
         <title>RainDropClicker</title>        
     </head>
     <body>
@@ -15,7 +15,7 @@
             <li><a href="#">Améliorations</a>
                 <ul>
                     <li><a id="nuageplusgrand" href="javascript:getMulti()">Nuage | 500€</a></li>
-                    <li><a id="upMenuRecipient" href="javascript:upRecipient()">Récipient | 100€</a></li>
+                    <li><a id="upMenuReservoir" href="javascript:upReservoir()">Réservoir | 100€</a></li>
                     <li><a id="goutteauto" href="javascript:autoClicker()">Chaman | 1000€</a></li>
                 </ul>
             </li>
@@ -30,7 +30,7 @@
         <!--<div id="gout"><img src="../images/Goutte_d'eau.png" width="100px" height="100px"></div>-->
         
 <!------------------------------------------------------------------------------------------------------------------------------>
-        <div id="recipient">
+        <div id="reservoir">
             <div id="nbrGouttes">0 / 10</div>
             <div id="niveauEau"></div>
         </div>
@@ -64,7 +64,7 @@
         </div>
         
     </body>
-    <script src="code/js/recipient.js"></script>
+    <script src="code/js/reservoir.js"></script>
     <script src="code/js/nuage.js"></script>
-    <script src="code/js/rain.js"></script>
+    <script src="code/js/population.js"></script>
 </html>
