automatisation des méthodes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a id="upgradeTank" href="javascript:upgradeTank()"></a></li>
                     <li><a href="javascript:suprVillager(allVillagers)">Supprimer Villageois</a></li>
-                    <li><a href="javascript:createVillager()">Création villageois</a></li>
+                    <li><a href="javascript:createVillager(allVillagers)">Création villageois</a></li>
                     <li><a href="javascript:getWater(allVillagers)">Donner à boire au villageois</a></li>
                 </ul>
             </li>
