mise à jour du code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <li><a href="#">Améliorations</a>
                 <ul>
                     <li><a id="upgradeTank" href="javascript:upgradeTank()"></a></li>
-                    <li><a href="javascript:suprVillager(allVillagers)">Supprimer Villageois</a></li>
                     <li><a href="javascript:createVillager(allVillagers)">Création villageois</a></li>
                     <li><a href="javascript:getWater(allVillagers)">Donner à boire au villageois</a></li>
                 </ul>
@@ -30,6 +29,8 @@
         <div id="waterLevel"></div>
         <div id="dropsAmount"></div>
     </div>
+
+    <div id="villagers"></div>
 
 </body>
 
